dummysite/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummysite-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummysite-controller
  template:
    metadata:
      labels:
        app: dummysite-controller
    spec:
      serviceAccountName: dummysite-controller
      containers:
        - name: controller
          image: dummysite-controller
